# cpuinfo

./: .clang-format  .gitignore  .travis.yml  Android.bp  BUILD.bazel  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  appveyor.yml  build.zig  build.zig.zon  configure.py  confu.yaml  libcpuinfo.pc.in
.github/workflows/: build.yml  build_bazel.yml  build_zig.yml  clang-format-check.yml
bench/: get-current.cc  init.cc
cmake/: DownloadGoogleBenchmark.cmake  DownloadGoogleTest.cmake  cpuinfo-config.cmake.in
include/: cpuinfo-mock.h  cpuinfo.h
jni/: Android.mk  Application.mk
scripts/: android-arm64-auxv-dump.sh  android-arm64-build.sh  android-arm64-mock.sh  android-arm64-test.sh  android-armv7-auxv-dump.sh  android-armv7-build.sh  android-armv7-cache-info.sh  android-armv7-cpu-info.sh  android-armv7-isa-info.sh  android-armv7-mock.sh  android-armv7-test.sh  android-device-dump.py  android-filesystem-dump.py  android-riscv64-build.sh  android-x86-build.sh  android-x86-cache-info.sh  android-x86-cpu-info.sh  android-x86-isa-info.sh  android-x86-mock.sh  local-bazel-build.sh  local-build.sh
src/: api.c  api.h  cache.c  init.c  isa.c  log.c  log.h  utils.h
src/arm/: api.h  cache.c  midr.h  tlb.c  uarch.c
src/arm/android/: api.h  chipset.c  gpu.c  properties.c
src/arm/fuchsia/: init.c
src/arm/linux/: aarch32-isa.c  aarch64-isa.c  api.h  arm32-isa.c  arm64-isa.c  chipset.c  clusters.c  cp.h  cpuinfo.c  hwcap.c  init.c  isa.c  midr.c
src/arm/mach/: init.c
src/arm/windows/: init-by-logical-sys-info.c  init.c  windows-arm-init.h
src/arm/zephyr/: init.c
src/cpuinfo/: common.h  internal-api.h  log.h
src/emscripten/: init.c
src/freebsd/: topology.c
src/gpu/: api.h  gles-ios.m  gles2-mock.c  gles2.c
src/linux/: api.h  cpulist.c  cpuset.c  current.c  gpu.c  mockfile.c  multiline.c  processors.c  smallfile.c
src/loongarch/: api.h  cache.c  cpucfg.h  prid.h  uarch.c
src/loongarch/linux/: api.h  cache.c  chipset.c  clusters.c  cpucfg.c  cpuinfo.c  hwcap.c  init.c  loongarch64-isa.c  prid.c
src/mach/: api.h  topology.c
src/powerpc/: api.h  cache.c  pvr.h  uarch.c
src/powerpc/linux/: api.h  chipset.c  clusters.c  cpuinfo.c  init.c  ppc64-hw.c  ppc64-isa.c  processors.c
src/qnx/: api.c  api.h
src/riscv/: api.h  cache.c  uarch.c
src/riscv/linux/: api.h  cache.c  cpuinfo.c  hwcap.c  init.c  riscv-hw.c  riscv-isa.c
src/x86/: api.h  cpuid.h  info.c  init.c  isa.c  mockcpuid.c  name.c  topology.c  uarch.c  vendor.c
src/x86/cache/: descriptor.c  deterministic.c  init.c
src/x86/freebsd/: init.c
src/x86/fuchsia/: init.c
src/x86/linux/: api.h  cpuinfo.c  init.c
src/x86/mach/: init.c
src/x86/nacl/: isa.c
src/x86/windows/: init.c
test/: arm-cache.cc  arndaleboard.cc  beagleboard-xm.cc  blu-r1-hd.cc  blu-r1-hd.h  deinit.cc  galaxy-c9-pro.cc  galaxy-c9-pro.h  galaxy-grand-prime-value-edition.cc  galaxy-grand-prime-value-edition.h  galaxy-j7-tmobile.cc  galaxy-j7-tmobile.h  galaxy-j7-uae.cc  galaxy-j7-uae.h  galaxy-nexus.cc  galaxy-s3-us.cc  galaxy-s3-us.h  galaxy-s4-us.cc  galaxy-s4-us.h  galaxy-s5-global.cc  galaxy-s5-global.h  galaxy-s5-us.cc  galaxy-s5-us.h  galaxy-s6.cc  galaxy-s6.h  galaxy-s7-global.cc  galaxy-s7-global.h  galaxy-s7-us.cc  galaxy-s7-us.h  galaxy-s8-global.cc  galaxy-s8-global.h  galaxy-s8-us.cc  galaxy-s8-us.h  galaxy-tab-3-7.0.cc  galaxy-win-duos.cc  get-current.cc  huawei-mate-8.cc  huawei-mate-8.h  huawei-p9-lite.cc  huawei-p9-lite.h  (+51 more)
test/mock/: alcatel-revvl.cc  alcatel-revvl.h  alldocube-iwork8.cc  alldocube-iwork8.h  atm7029b-tablet.cc  atm7029b-tablet.h  blu-r1-hd.cc  blu-r1-hd.h  galaxy-a3-2016-eu.cc  galaxy-a3-2016-eu.h  galaxy-a8-2016-duos.cc  galaxy-a8-2016-duos.h  galaxy-a8-2018.cc  galaxy-a8-2018.h  galaxy-c9-pro.cc  galaxy-c9-pro.h  galaxy-grand-prime-value-edition.cc  galaxy-grand-prime-value-edition.h  galaxy-j1-2016.cc  galaxy-j1-2016.h  galaxy-j5.cc  galaxy-j5.h  galaxy-j7-prime.cc  galaxy-j7-prime.h  galaxy-j7-tmobile.cc  galaxy-j7-tmobile.h  galaxy-j7-uae.cc  galaxy-j7-uae.h  galaxy-s3-us.cc  galaxy-s3-us.h  galaxy-s4-us.cc  galaxy-s4-us.h  galaxy-s5-global.cc  galaxy-s5-global.h  galaxy-s5-us.cc  galaxy-s5-us.h  galaxy-s6.cc  galaxy-s6.h  galaxy-s7-global.cc  galaxy-s7-global.h  (+127 more)
test/name/: android-properties-interface.c  android-properties.cc  brand-string.cc  power-features.cc  proc-cpuinfo-hardware.cc  ro-arch.cc  ro-board-platform.cc  ro-chipname.cc  ro-mediatek-platform.cc  ro-product-board.cc
tools/: Android.bp  auxv-dump.c  cache-info.c  cpu-info.c  cpuid-dump.c  cpuinfo-dump.c  cpuinfo-svc.c  gpu-dump.c  isa-info.c
